[project]
name = "mcp-cryptokit"
version = "0.1.0"
description = "A MCP server project to handle cryptographic operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "cryptography>=41.0.2",
    "pydantic>=2.0.0",
    "asyncio>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cryptokit"]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-cryptokit = "cryptokit:main"