[project]
name = "mcp-cryptokit"
version = "0.1.0"
description = "A MCP server project to handle cryptographic operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "cryptography>=41.0.2",
    "pydantic>=2.0.0",
    "asyncio>=3.0.0",
    "gmssl>=2.5.4",
    "gmalg>=1.0.6",
    "mcp[cli]>=1.6.0",
    "dashscope>=1.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cryptokit"]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-cryptokit = "cryptokit:main"
